--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <body>
 
-  <div class="image-top"><img src="images/bg-pattern-top.svg" alt=""></div>
+  <section class="image-top" role="img"><img src="images/bg-pattern-top.svg" alt="">
+  </section>
 
 
 
@@ -63,7 +64,7 @@
   </main>
 
 
-  <div class="image-bottom"><img src="images/bg-pattern-top.svg" alt=""></div>
+  <section class="image-bottom" role="img"><img src="images/bg-pattern-top.svg" alt=""></div>
 
 
 
