--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <section class="image-top" role="img"><img src="images/bg-pattern-top.svg" alt="">
+  <section class="image-top"><img src="images/bg-pattern-top.svg" alt="">
   </section>
 
 
@@ -64,7 +64,7 @@
   </main>
 
 
-  <section class="image-bottom" role="img"><img src="images/bg-pattern-top.svg" alt=""></div>
+  <section class="image-bottom" ><img src="images/bg-pattern-top.svg" alt=""></div>
 
 
 
